html-skeleton complete

--- a/html-skeleton/index.html
+++ b/html-skeleton/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>HTML Skeletons</title>
+  </head>
     <body>
       Hello, HTML!
-    </body></html>
+    </body>
+</html>
