--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -8,60 +8,65 @@
 </head>
 <body>
   <h1>Coding Form!</h1>
-
-  <div>
-    <label for="Email">Email<br>
-      <input type="text" name="Email" size="30">
-    </label>
-  </div>
-
-  <div>
-    <label for="whyCode">
-      Why is coding cool?<br>
-    </label>
-    <select name="codereason" id="whyCode">
-      <option value="interesting">Because it's interesting</option>
-      <option value="fun">Because it's fun</option>
-      <option value="powerful">Because it's powerful</option>
-    </select>
-  </div>
-
-  <div>
-    <br>
-    Favorite Language (choose) <br>
-
-    <label>
-      <input type="radio" name="favlang" value="HTML">
-      HTML
-    </label>
-    <label>
-      <input type="radio" name="favlang" value="CSS">
-      CSS
-    </label>
-    <label>
-      <input type="radio" name="favlang" value="JS">
-      JS
-    </label>
-    <br>
-
+  <form action="https://example.com/form.php" method="get">
     <div>
-      <label for="moreInfo">
-        <br>
-        Would you like to sign up for more information?
-        <br>
-        <input type="checkbox" name="moreInfo">
-        Sign me up!
+      <label for="Email">Email<br>
+        <input type="email" name="Email" size="30">
       </label>
     </div>
 
     <div>
-      Comments<br>
-      <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
-      <br>
-      <button name="commentpush">Submit</button>
+      <label for="whyCode">
+        Why is coding cool?<br>
+      </label>
+      <select name="codereason" id="whyCode">
+        <option value="select"> Select an option</option>
+        <option value="interesting">Because it's interesting</option>
+        <option value="fun">Because it's fun</option>
+        <option value="powerful">Because it's powerful</option>
+      </select>
     </div>
 
-  </div>
+    <div>
+      <br>
+      Favorite Language (choose) <br>
+
+      <label>
+        <input type="radio" name="favlang" value="HTML">
+        HTML
+      </label>
+      <label>
+        <input type="radio" name="favlang" value="CSS">
+        CSS
+      </label>
+      <label>
+        <input type="radio" name="favlang" value="JS">
+        JS
+      </label>
+      <br>
+
+      <div>
+        <label for="moreInfo">
+          <br>
+          Would you like to sign up for more information?
+          <br>
+          <input type="checkbox" name="moreInfo">
+          Sign me up!
+        </label>
+      </div>
+
+      <div>
+        Comments<br>
+        <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
+        <br>
+        <button name="commentpush">Submit</button>
+      </div>
+
+    </div>
+
+
+  </form>
+
 
 
 
