html-forms wrap comments in label element

--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -56,20 +56,16 @@
       </div>
 
       <div>
-        Comments<br>
+        <label for="comments">
+          Comments<br>
+        </label>
+
         <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
         <br>
         <button name="commentpush">Submit</button>
+
       </div>
-
     </div>
-
-
   </form>
-
-
-
-
-
 </body>
 </html>
