--- a/css-layout-classes/index.html
+++ b/css-layout-classes/index.html
@@ -14,7 +14,9 @@
   <div class="container">
 
     <div class="row">
-      <h1>Choose your character!</h1>
+      <div class="col-100">
+        <h1>Choose your character!</h1>
+      </div>
     </div>
     <div class="row">
       <div class="col-33">
