margin changes for footers

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -86,9 +86,10 @@
     <div class="row darkbg footer">
       <div class="col50 footertext">
         <img src="./images/logo-white.png" alt="canvas logo">
-        <address>2307 Irving Street, Suite 228<br>San Francisco CA 91122</address>
-        <p>(800) 370-1416</p>
-        <p>info@canvasmedical.com</p>
+        <p>2307 Irving Street, Suite 228<br>
+          San Francisco CA 91122<br>
+          (800) 370-1416<br>
+          info@canvasmedical.com</p>
       </div>
       <div class="col25 footertext">
         <p>COMPANY</p>
