--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -48,7 +48,7 @@
     <div class="row otherbg">
       <div class="col100 centertext">
         <h2>Clinicians Prefer Canvas</h2>
-        <p>Physician owned primary case practices across the country have already made Canvas the fabric of their care
+        <p>Physician-owned primary case practices across the country have already made Canvas the fabric of their care
         </p>
       </div>
     </div>
@@ -84,7 +84,7 @@
 
 
     <div class="row darkbg footer">
-      <div class="col50 footertext">
+      <div class="col50 leftfootertext">
         <img src="./images/logo-white.png" alt="canvas logo">
         <p>2307 Irving Street, Suite 228<br>
           San Francisco CA 91122<br>
@@ -98,6 +98,7 @@
       </div>
       <div class="col25 footertext">
         <p>PRODUCT</p>
+        <a href="product">Product</a>
         <a href="implement">Implementation</a>
         <a href="healthplans">For Health Plans</a>
         <a href="sec">Security</a>
