adding transparency layer

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -33,10 +33,10 @@
 
 
     </div>
-    <div class="row heropage">
+    <div class="row heropage darken">
       <!-- image is too bright, need to figure out how to add opacity layer-->
       <div class="col60 herotext">
-        <h1>The EMR Reimagined for Primary Care</h1>
+        <h1>The EMR Reimagined for<br> Primary Care</h1>
         <p>Can't remember the last time you talked with a patient without focusing on the EMR? Canvas lets you
           rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move seamlessly between
           tasks within the platform. You stay present with patients while your whole care team stays up-to-speed. Be a
@@ -83,7 +83,7 @@
     </div>
 
 
-    <div class="row darkbg footer">
+    <div class="row darkbg">
       <div class="col50 leftfootertext">
         <img src="./images/logo-white.png" alt="canvas logo">
         <p>2307 Irving Street, Suite 228<br>
