--- a/css-four-column-layout/index.html
+++ b/css-four-column-layout/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;700&display=swap" rel="stylesheet">
   <title>css four column layout</title>
 </head>
 <body>
@@ -18,26 +21,26 @@
       <div class="col25">
         <img class="phone" src="./images/screen-1.png" alt="">
         <img src="./images/switch-icon.png" alt="">
-        <h2>app switching</h2>
-        <p>toggles all your apps on and off</p>
+        <h2>App Switching</h2>
+        <p>Toggles all your apps on and off.</p>
       </div>
       <div class="col25">
         <img class="phone" src="./images/screen-2.png" alt="">
         <img src="./images/filter-icon.png" alt="">
-        <h2>trip filtering</h2>
-        <p>evaluates your trip requests</p>
+        <h2>Trip Filtering</h2>
+        <p>Evaluates your trip requests.</p>
       </div>
       <div class="col25">
         <img class="phone" src="./images/screen-3.png" alt="">
         <img src="./images/slider-icon.png" alt="">
-        <h2>service filters</h2>
-        <p>accepts only your ideal trips</p>
+        <h2>Service Filters</h2>
+        <p>Accepts only your ideal trips.</p>
       </div>
       <div class="col25">
         <img class="phone" src="./images/screen-4.png" alt="">
         <img src="./images/bars-icon.png" alt="">
-        <h2>stats + mileage</h2>
-        <p>tracks your trips across all apps</p>
+        <h2>Stats + Mileage</h2>
+        <p>Tracks your trips across all apps.</p>
       </div>
     </div>
   </div>
