--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CSS Challenge - Canvas Medical</title>
-  <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="fonts.css">
+  <link rel="stylesheet" href="layout.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -104,7 +105,6 @@
         <a href="sec">Security</a>
       </div>
     </div>
-    `
     <div class="row footer">
       <div class="col50 footerlink">
         <a href="privacy">Privacy &amp; Terms</a>
