--- a/css-ecommerce-page/index.html
+++ b/css-ecommerce-page/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
   <div class="container">
@@ -17,32 +19,47 @@
     </div>
     <div class="row">
       <div class="col20">
-        <img src="./images/dress1.jpeg" alt="">
-        <h5>Free People</h5>
-        <span> | Size 6</span>
+        <img src="./images/dress1.jpeg" alt="black dress">
       </div>
       <div class="col20">
-        <img src="./images/ysl-bag.jpeg" alt="">
-        <h5>Yves Saint Laurent</h5>
-        <span> | One-Size</span>
+        <img src="./images/ysl-bag.jpeg" alt="purse">
       </div>
       <div class="col20">
-        <img src="./images/key.jpeg" alt="">
-        <h5>Tiffany</h5>
-        <span> | One-Size</span>
+        <img src="./images/key.jpeg" alt="key">
+
       </div>
       <div class="col20">
-        <img src="./images/lv-bag.jpg" alt="">
-        <h5>Louis Vuitton</h5>
-        <span> | One-Size</span>
+        <img src="./images/lv-bag.jpg" alt="LV bag">
+
       </div>
       <div class="col20">
-        <img src="./images/dress2.jpeg" alt="">
-        <h5>Reformation</h5>
-        <span> | Size 4</span>
+        <img src="./images/dress2.jpeg" alt="white blue dress">
       </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col20">
+      <h5>Free People<span class="grey"> | Size 6</span></h5>
+      <h5><span class="hilite">$35</span> <span class="grey"><s> $125 retail</s></span></h5>
+    </div>
+    <div class="col20">
+      <h5>Yves Saint Laurent<span class="grey"> | One-Size</span></h5>
+      <h5><span class="hilite">$200</span> <span class="grey"><s> $1600 retail</s></span></h5>
+    </div>
+    <div class="col20">
+      <h5>Tiffany<span class="grey"> | One-Size</span></h5>
+      <h5><span class="hilite">$476</span> <span class="grey"><s> $2000 retail</s></span></h5>
+    </div>
+    <div class="col20">
+      <h5>Louis Vuitton<span class="grey"> | One-Size</span></h5>
+      <h5><span class="hilite">$95</span> <span class="grey"><s> $1200 retail</s></span></h5>
+    </div>
+    <div class="col20">
+      <h5>Reformation<span class="grey"> | Size 4</span></h5>
+      <h5><span class="hilite">$20</span> <span class="grey"><s> $198 retail</s></span></h5>
     </div>
   </div>
 
 </body>
+
 </html>
