--- a/css-canvas-medical/product.html
+++ b/css-canvas-medical/product.html
@@ -30,9 +30,50 @@
       </div>
     </div>
 
-    <div class="row"></div>
-    <div class="row"></div>
-    <div class="row"></div>
+    <div class="row hero-section darken">
+      <div class="col60">
+        <h2>It's the foundation for patient-centered primary care.</h2>
+        <p>Canvas creates a shared understanding of patient care across clinicians, staff, and patients themselves — making you more productive, less stressed, and adding just a bit more joy into your practice of medicine.</p>
+      </div>
+
+    </div>
+
+    <div class="row text-section light-bg">
+      <div class="col50">
+        <img src="./images/product/product-image-1.png" alt="">
+      </div>
+      <div class="col50 justify-center">
+        <h2>It puts care at your command</h2>
+        <p>You don't have to click a dozen times in order a flu shot or bounce around five windows to discover the last blood count. Canvas pulls everything you need directly into your note, so you never have to leave it. And because Canvas learns from every interaction, it gets smarter with every patient you see.</p>
+        <a href="">Learn more about charting</a>
+        <em>"Canvas works three times as fast, improves performance dramatically on key quality metrics, and is incredibly easy to use. The right information is presented in the right way at the right time, and the product leverages technology to actually improve the quality of care I provide."</em>
+        <p>- Dr. Steve Magree, Family Physician</p>
+      </div>
+    </div>
+    <div class="row text-section">
+      <div class="col50 justify-center">
+        <h2>It brings your population to life</h2>
+        <p>Canvas makes it simple to search and take action across your entire patient panel, so you know who needs extra help and how best to give it to them. Easily reach out to any subgroup of your population with proactive interventions, and take comfort knowing you're a step ahead.</p>
+        <a href="">Learn more about population management</a>
+        <em>"Which of my uncontrolled diabetic patients haven't had a test in the past 3 months? Which of my patients are on potentially unsafe levels of opioids according to the most recent guidelines? That doesn't seem like a lot to ask and those are tremendously important questions. But I just couldn't get an answer from our old system! Canvas is light-years ahead."</em>
+        <p>- Dr. Ninad Athale, Family Physician</p>
+      </div>
+      <div class="col50">
+        <img src="./images/product/product-image-2.png" alt="">
+      </div>
+    </div>
+    <div class="row text-section light-bg">
+      <div class="col50">
+        <img src="./images/product/product-image-3.png" alt="">
+      </div>
+      <div class="col50 justify-center">
+        <h2>It automates performance improvement</h2>
+        <p>Clinical quality and revenue cycle reports can help you understand performance, but they aren't enough to improve quality and increase revenue day after day. Canvas automates quality protocols and charge capture so clinicians can focus on more complex work only they can do.</p>
+        <a href="">Learn more about practice management and billing</a>
+        <em>"With MIPS a reality and fee-for-service billing rules as complex as ever, to be honest I didn't know how we were going to keep up. We're a small practice and we don't have a big quality team or a group of coders to catch everything. The automation in Canvas has completely eliminated my concerns about quality and revenue performance."</em>
+        <p>- Dr. Sam Ward, Family Physician</p>
+      </div>
+    </div>
 
     <div class="row footer-cta">
       <div class="col66">
